Fixed content overflow in Safari 5.x

--- a/holygrail.css
+++ b/holygrail.css
@@ -14,19 +14,19 @@ html {
 
 /* Prefixes:
  * [1]	Safari 3.1
- * 		Chrome pre 20
+ * 	Chrome pre 20
  * [2]	Chrome 20
- * 		Safari 6.1
+ * 	Safari 6.1
  * [3]	Chrome 21
- * 		Opera 12.1
- * 		Opera Mini 5
- * 		Firefox 21
- * 		IE 10
- * 		Edge 12
- * 		Safari 6.1
- * 		Chrome Android 45
- * 		Firefox Android 41
- * 		IE Mobile 10
+ * 	Opera 12.1
+ * 	Opera Mini 5
+ * 	Firefox 21
+ * 	IE 10
+ * 	Edge 12
+ * 	Safari 6.1
+ * 	Chrome Android 45
+ * 	Firefox Android 41
+ * 	IE Mobile 10
  */
 
 /* Flex containers
@@ -34,7 +34,7 @@ html {
 body, main, main .restrict,	.restrict {
 	display: -webkit-box;	/* [1] */
 	display: -webkit-flex;	/* [2] */
-	display: flex;			/* [3] */
+	display: flex;		/* [3] */
 }
 
 /* Full height on the body element to partially trigger the sticky footer.
@@ -61,8 +61,10 @@ aside, body > * {
 	            flex: 0 0 auto;	/* [3] */
 }
 
-/* Let the main flex container to grow for the trigger sticky footer"  */
+/* Let the main flex container grow to trigger sticky footer"  */
 main {
+	min-height: 0%; /* Or the contents will overflow in Safari 5.x */
+
 	-webkit-box-flex: 1;		/* [1] */
 	    -webkit-flex: 1 0 auto;	/* [3] */
 	            flex: 1 0 auto;	/* [3] */
